# github-repo-loc-analyser

./: .gitignore  Dockerfile  Dockerfile_worker  README.md  development_logging.conf  docker-compose.yaml  grla.conf  pyproject.toml  shell.nix
.docker/: docker-default-logging.conf
github_repo_loc_analyser/: __init__.py  base_celery_conf.py  code_analyser.py  code_analyzer.py  data_structure.py  github_api_querier.py  helper.py  main.py  master.py  slave.py  tasks.py
